1333 Fix chat scrollbar in notebook (#1334)

--- a/ui/apps/notebook-ui/src/components/Starboard/Starboard.scss
+++ b/ui/apps/notebook-ui/src/components/Starboard/Starboard.scss
@@ -15,6 +15,12 @@
     gap: 10px;
     height: calc(100vh - 240px);
   }
+
+  .chat-container {
+    .MuiCollapse-vertical {
+      height: 100%;
+    }
+  }
 }
 
 #starboard-root {
